# vanitham

./: README.md  pyproject.toml
.github/workflows/: ci.yml
vanitham/: hooks.py  modules.txt
vanitham/public/js/: delivery_note.js  purchase_invoice.js  purchase_order.js  purchase_receipt.js  sales_invoice.js  sales_order.js
vanitham/vanitham/print_format/asset_label/: asset_label.json
