[project]
name = "vanitham"
authors = [
    { name = "Vanitham", email = "example@gmail.com" }
]
description = "Vanitham"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# Add only dev-only Python libs if needed
# example:
# pytest = "~=7.4"
